REK328 Attempt to update document body before ready is fixed

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "uglify-js": "2.4.22"
   },
   "dependencies": {
+    "domready": "^0.3.0",
     "eventlistener": "0.0.1",
     "gardr-core-plugin": "0.1.0",
     "gardr-ext": "^1.0.0-alpha.3",
