--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "test": "npm run build && karma start --single-run",
+    "test:watch": "npm run build && karma start",
     "test-ci": "node make ci",
     "posttest": "node make lint",
     "build": "node make build",
