--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "finn-js-code-style": "^4.3.0",
     "karma": "^0.12.31",
     "karma-browserify": "^4.1.2",
+    "karma-chrome-launcher": "^0.2.1",
     "karma-es5-shim": "0.0.4",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.2.0",
